[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pptu"
version = "2023.11.02"
description = "Python P2P Torrent Uploader"
authors = ["alexia", "pcroland", "varyg"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
cinemagoer = "^2022.2.11"
guessit = "^3.4.3"
httpx = "^0.23.0"
humanize = "^4.3.0"
langcodes = "^3.3.0"
lxml = "^4.9.1"
platformdirs = "^2.5.2"
pymediainfo = "^5.1.0"
pyotp = "^2.6.0"
pyoxipng = "^0.1.0"
pyrosimple = "^2.0.0rc1"
requests = "^2.28.0"
rich = "^12.4.4"
"ruamel.yaml" = "^0.17.21"
toml = "^0.10.2"
torf = "^4.0.3"
Wand = "^0.6.9"
tls-client = "^0.2.1"
requests-toolbelt = "^1.0.0"

[tool.poetry.scripts]
pptu = "pptu.cli:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autoflake = "^1.5.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-pie = "^0.16.0"
Flake8-pyproject = "^1.1.0.post0"
flake8-simplify = "^0.19.3"
flake8-type-checking = "^2.1.3"
isort = "^5.10.1"

flake8-broken-line = "^0.5.0"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-encodings = "^0.5.0.post1"
flake8-implicit-str-concat = "^0.3.0"
flake8-requirements = "^1.6.2"
flake8-use-fstring = "^1.4"
mypy = "^0.981"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
pyupgrade = "^2.37.3"
types-attrs = "^19.1.0"
types-beautifulsoup4 = "^4.11.6"
types-requests = "^2.28.10"
types-toml = "^0.10.8"
unify = "^0.5"
vulture = "^2.6"
yesqa = "^1.4.0"

[tool.autoflake]
exclude = ["pptu/uploaders/__init__.py"]
remove-all-unused-imports = true

[tool.flake8]
exclude = [".venv"]
enable-extensions = ["TC", "TC1"]
extend-ignore = ["FS002", "TC006"]
ignore-names = ["L"]
max-line-length = 120
per-file-ignores = ["pptu/uploaders/__init__.py:F401"]

[tool.flake8.known-modules]
cinemagoer = ["imdb"]
pyoxipng = ["oxipng"]

[tool.isort]
classes = ["IO", "PPTU"]
line_length = 120
lines_after_imports = 2
profile = "black"

[tool.mypy]
exclude = [".venv"]
python_version = "3.8"
show_error_codes = true
strict = true
disallow_untyped_calls = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = "guessit"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymediainfo"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyrosimple.util.metafile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wand.image"
ignore_missing_imports = true

[tool.vulture]
paths = ["."]
exclude = [".venv/"]
min_confidence = 100
