[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pptu"
version = "2024.05.24"
description = "Python P2P Torrent Uploader"
authors = ["alexia", "pcroland", "varyg"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
cinemagoer = "^2023.5.1"
guessit = "^3.8.0"
httpx = "^0.27.0"
humanize = "^4.9.0"
langcodes = "^3.4.0"
lxml = "^5.2.2"
platformdirs = "^4.2.2"
pymediainfo = "^6.0.0"
pyotp = "^2.9.0"
pyoxipng = "^9.0.0"
pyrosimple = "^2.14.0"
requests = "^2.32.3"
rich = "^13.7.1"
toml = "^0.10.2"
torf = "^4.2.7"
Wand = "^0.6.13"

[tool.poetry.scripts]
pptu = "pptu.cli:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
ruff = "^0.1.14"

mypy = "^0.981"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
pyupgrade = "^2.37.3"
types-attrs = "^19.1.0"
types-beautifulsoup4 = "^4.11.6"
types-requests = "^2.28.10"
types-toml = "^0.10.8"
unify = "^0.5"
vulture = "^2.6"
yesqa = "^1.4.0"

[tool.isort]
classes = ["IO", "PPTU"]
line_length = 120
lines_after_imports = 2
profile = "black"

[tool.mypy]
exclude = [".venv"]
python_version = "3.8"
show_error_codes = true
strict = true
disallow_untyped_calls = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = "guessit"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymediainfo"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyrosimple.util.metafile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wand.image"
ignore_missing_imports = true

[tool.vulture]
paths = ["."]
exclude = [".venv/"]
min_confidence = 100

[tool.ruff.lint]
extend-select = ["E501"]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
